# Lazuli

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
BaseNaviWidget/: BaseNaviWidget.h  CMakeLists.txt
StyleManager/: StyleManager.cpp  StyleManager.h
TestPlugin/: CMakeLists.txt  TestPlugin.cpp  TestPlugin.h  TestPlugin.ui
gitRes/: README_ru.md
include/: global_vars.h
include/MainWindow/: MainWindow.h
include/MapControl/: MapControl.h
include/PluginLoader/: PluginLoader.h
include/SendWidget/: SendWidget.h
include/Senders/: BaseSender.h  SerialSender.h  udp_sender.h
include/TopPanel/: TopPanel.h
include/UdpSender/: udp_sender.h
resources/: Style.qrc  main.qml  map.qrc
resources/style/: day.fmt  day.json  night.fmt  night.json  style.qss
src/: main.cpp
src/MainWindow/: MainWindow.cpp
src/MapControl/: MapControl.cpp
src/PluginLoader/: PluginLoader.cpp
src/SendWidget/: SendWidget.cpp
src/Senders/: SerialSender.cpp  udp_sender.cpp
src/TopPanel/: TopPanel.cpp
src/UdpSender/: udp_sender.cpp
translations/: Lazuli_en.qm  Lazuli_en.ts  Lazuli_ru.qm  Lazuli_ru.ts  translations.qrc
ui/MainWindow/: MainWindow.ui
ui/SendWidget/: SendWidget.ui
ui/TopPanel/: TopPanel.ui
